* 2007-08-23 - marcus.klein@open-xchange.com

 - Bugfix #9013: Added the alarm attribute as possible list attribute.
 - Bugfix #9045: Fixed html page in TestServlet.

* 2007-08-23 - thorben.betten@open-xchange.com

 - Bugfix #8498: Checking for an empty content type when attaching
   (infostore) files to a (smtp) message
 - Bugfix #9069: Checking if destination folder is a subsequent folder on
   move operation
 - Bugfix #7928: User's Vcard is not attached twice anymore when sending a
   draft message
 - Bugfix #9059: Skipping leading quote character when comparing email
   addresses based on their personal part
 - Bugfix #7331: Additional check for an SMTP error's return code if init
   cause is an exceeded storage allocation

* 2007-08-22 - thorben.betten@open-xchange.com

 - Fixed checking for spam activation when checking default folders
 - Finished IMAP message to mail message conversion
 - Continued IMAP message storage

* 2007-08-21 - thorben.betten@open-xchange.com

 - Bugfix #8987: Fixed html2text conversion while keeping quotes
 - Bugfix #8988: Fixed NPE on non-matching servlet path
 - Rough new mail interface
 - Completed IMAP folder storage

* 2007-08-21 - francisco.laguna@open-xchange.com

 - Fixed bug #8971. User userId and not contactId for internal user participants 
   in ICAL import.

* 2007-08-20 - martin.kauss@open-xchange.com

 - Fixed bug #8957. A search without a folder id returned -1 as folder instead
   of the real folder id. This has been fixed.

* 2007-08-20 - thorben.betten@open-xchange.com

 - Bugfix #8921: Fixed indexing of mail default folders dependent on spam
   activation
 - Bugfix #8937: Fixed typo by replacing all occurences of "instanciat"
   with "instantiat"
 - Fixed regex to detect uuencoded attachments inside a plaint text message
 - Fixed connection handling in:
   OXFolderAdminHelper.propagateUserModification()

* 2007-08-17 - marcus.klein@open-xchange.com
